# stm32-sample-code-01

./: .cproject  .gitignore  .mxproject  .project  CMakeLists.txt  PROJECT_A.ioc
Core/Inc/: stm32f4xx_hal_conf.h
Core/Src/: main.c  stm32f4xx_hal_msp.c
Debug/: PROJECT_A.elf  PROJECT_A.list  PROJECT_A.map  build.bat.txt  makefile  objects.list  sources.mk
Debug/Core/Src/: main.cyclo  main.d  main.su  stm32f4xx_hal_msp.cyclo  stm32f4xx_hal_msp.d  stm32f4xx_hal_msp.su  stm32f4xx_it.d  subdir.mk  system_stm32f4xx.d
Debug/Drivers/STM32F4xx_HAL_Driver/Src/: stm32f4xx_hal.d  stm32f4xx_hal_adc.d  stm32f4xx_hal_adc_ex.d  stm32f4xx_hal_cortex.d  stm32f4xx_hal_dma.d  stm32f4xx_hal_dma_ex.d  stm32f4xx_hal_exti.d  stm32f4xx_hal_flash.d  stm32f4xx_hal_flash_ex.d  stm32f4xx_hal_flash_ramfunc.d  stm32f4xx_hal_gpio.d  stm32f4xx_hal_i2c.d  stm32f4xx_hal_i2c_ex.d  stm32f4xx_hal_i2s.d  stm32f4xx_hal_i2s_ex.d  stm32f4xx_hal_pwr.d  stm32f4xx_hal_pwr_ex.d  stm32f4xx_hal_rcc.d  stm32f4xx_hal_rcc_ex.d  stm32f4xx_hal_rtc.d  stm32f4xx_hal_rtc_ex.d  stm32f4xx_hal_spi.d  stm32f4xx_hal_tim.d  stm32f4xx_hal_tim_ex.d  stm32f4xx_hal_uart.d  subdir.mk
Debug_with_DebugCode/: PROJECT_A.elf  PROJECT_A.list  PROJECT_A.map  objects.list
Debug_with_DebugCode/Core/Src/: main.cyclo  main.d  main.su  stm32f4xx_hal_msp.cyclo  stm32f4xx_hal_msp.d  stm32f4xx_hal_msp.su  stm32f4xx_it.d  subdir.mk  system_stm32f4xx.d
Debug_with_DebugCode/Drivers/STM32F4xx_HAL_Driver/Src/: stm32f4xx_hal.d  stm32f4xx_hal_adc.d  stm32f4xx_hal_adc_ex.d  stm32f4xx_hal_cortex.d  stm32f4xx_hal_dma.d  stm32f4xx_hal_dma_ex.d  stm32f4xx_hal_exti.d  stm32f4xx_hal_flash.d  stm32f4xx_hal_flash_ex.d  stm32f4xx_hal_flash_ramfunc.d  stm32f4xx_hal_gpio.d  stm32f4xx_hal_i2c.d  stm32f4xx_hal_i2c_ex.d  stm32f4xx_hal_pwr.d  stm32f4xx_hal_pwr_ex.d  stm32f4xx_hal_rcc.d  stm32f4xx_hal_rcc_ex.d  stm32f4xx_hal_spi.d  stm32f4xx_hal_tim.d  stm32f4xx_hal_tim_ex.d  stm32f4xx_hal_uart.d  subdir.mk
unit_tests/: CMakeLists.txt  test.cpp
